--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ indexmap = { version = "1.9.3", features = ["serde"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 url = { version = "2.3.1", features = ["serde"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.11"
+predicates = "3.0.3"
