--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ url = { version = "2.3.1", features = ["serde"] }
 [dev-dependencies]
 assert_cmd = "2.0.11"
 predicates = "3.0.3"
+rstest = "0.17.0"
