--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 authors = ["jRimbault <jacques.rimbault@gmail.com>"]
 
 [dependencies]
+anyhow = "1.0.70"
 clap = { version = "4.2.2", features = ["derive"] }
-color-eyre = "0.6.2"
 indexmap = { version = "1.9.3", features = ["serde"] }
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
