--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,5 +50,10 @@ jobs:
         rust: [stable]
     steps:
       - uses: actions/checkout@v3
+      - name: Install valgrind
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y valgrind
       - name: Run tests
         run: cargo test
